public/src/styles/general.scss
@import './variables';

* {
    box-sizing: border-box;
}

body {
    font-family: 'Source Serif Pro', serif;
    color: $gray-dark;
}

input[type="text"] {
    height: 60px;
    width: 320px;
    font-family: 'Helvetica', sans-serif;
    font-size: 24px;
    box-sizing: border-box;
    padding-left: 21px;
    border-radius: 10px;

    &::placeholder {
        opacity: 59.56%;
    }
}

button {
    appearance: none;
    -moz-appearance: none;
    -webkit-appearance: none;
    outline: none;

    width: 100%;
    height: 60px;
    font-size: 24px;
    font-weight: bold;
    line-height: 30px;
    color: $gray-dark;
    background: $white-pure;
    border: 1px solid $gray-dark;
    border-radius: 10px;
    cursor: pointer;
}



.container {
    max-width: 1440px;
    margin: 0 auto;
}


.content {
    display: flex;
    height: 100%;
    min-height: calc(100vh - 100px);
    overflow: hidden;

    .right {
        display: flex;
        flex-direction: column;
        width: 100%;
        position: relative;
        overflow: scroll;

        #main {
            display: flex;
            flex-wrap: wrap;
            width: 100%;
            height: 903px;
            padding: 60px 11px 60px 13px;
            box-sizing: content-box;
        }
    }
}

.generator {
    display: none;
}

.admin .generator {
    display: block;
}

